fixes
Fix overlapping, m²,placeholders and member team image

--- a/client/src/style/UserProfile.css
+++ b/client/src/style/UserProfile.css
@@ -31,6 +31,11 @@
 .profile-info {
   flex: 1;
 }
+.profile-info h2{
+  text-align: start;
+  margin: 0px;
+  padding: 0px;
+}
 .profile-badge {
   background: #e8f5e9;
   color: #388e3c;
